// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|CreateDebateArgument create argument 1`] = `
Object {
  "createDebateArgument": Object {
    "debateArgument": Object {
      "author": Object {
        "id": "VXNlcjp1c2VyNQ==",
      },
      "body": "j'ai des trucs à dire",
      "debate": Object {
        "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
      },
      "notPublishedReason": null,
      "publishableUntil": "2060-10-01 00:00:00",
      "published": true,
      "type": "FOR",
    },
    "errorCode": null,
  },
}
`;

exports[`Internal|CreateDebateArgument create unpublished argument 1`] = `
Object {
  "createDebateArgument": Object {
    "debateArgument": Object {
      "author": Object {
        "id": "VXNlcjp1c2VyX25vdF9jb25maXJtZWQ=",
      },
      "body": "J'ai plein de trucs à dire",
      "debate": Object {
        "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
      },
      "notPublishedReason": "WAITING_AUTHOR_CONFIRMATION",
      "publishableUntil": "2060-10-01 00:00:00",
      "published": false,
      "type": "FOR",
    },
    "errorCode": null,
  },
}
`;

exports[`Internal|CreateDebateArgument try to create argument but already done 1`] = `
Object {
  "createDebateArgument": Object {
    "debateArgument": null,
    "errorCode": "ALREADY_HAS_ARGUMENT",
  },
}
`;

exports[`Internal|CreateDebateArgument try to create argument with wrong debate id 1`] = `
Object {
  "createDebateArgument": Object {
    "debateArgument": null,
    "errorCode": "UNKNOWN_DEBATE",
  },
}
`;
